# ompi

./: .gitignore
config/: opal_config_argobots.m4  opal_config_qthreads.m4  opal_config_threads.m4  opal_configure_options.m4
ompi/communicator/: comm.c
ompi/datatype/: ompi_datatype_module.c
ompi/include/: mpi.h.in  mpif-config.h.in
ompi/instance/: instance.c
ompi/mca/osc/rdma/: osc_rdma_component.c  osc_rdma_lock.h
ompi/mca/pml/ob1/: pml_ob1.c  pml_ob1.h  pml_ob1_comm.h  pml_ob1_recvfrag.c  pml_ob1_recvreq.c  pml_ob1_sendreq.c  pml_ob1_sendreq.h
ompi/mca/rte/pmix/: rte_pmix_module.c
ompi/mpi/c/: comm_f2c.c
ompi/mpi/fortran/mpif-h/: Makefile.am  comm_create_from_group_f.c  group_from_session_pset_f.c  intercomm_create_from_groups_f.c  prototypes_mpi.h  session_finalize_f.c  session_get_info_f.c  session_get_pset_info_f.c  session_init_f.c
ompi/mpi/fortran/use-mpi-f08/: Makefile.am  comm_create_from_group_f08.F90  intercomm_create_from_groups_f08.F90  session_finalize_f08.F90  session_get_num_psets_f08.F90  session_init_f08.F90
ompi/mpi/fortran/use-mpi-ignore-tkr/: mpi-ignore-tkr-interfaces.h.in
ompi/mpi/fortran/use-mpi-tkr/: mpi-f90-interfaces.h  pmpi-f90-interfaces.h
opal/datatype/: opal_datatype_module.c
opal/mca/btl/ofi/: btl_ofi.h  btl_ofi_component.c  btl_ofi_endpoint.h  btl_ofi_rdma.c  btl_ofi_rdma.h
opal/mca/btl/tcp/: btl_tcp_proc.c
opal/mca/btl/ugni/: btl_ugni_module.c  btl_ugni_send.c
opal/mca/threads/: mutex.h
opal/mca/threads/argobots/: Makefile.am  configure.m4
opal/mca/threads/pthreads/: threads_pthreads_mutex.c  (+5 more)
opal/runtime/: opal_finalize.c
(+11 files in other folders)
